# translator-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  convert.sh
data/: sample_texts.json
scripts/: compare_wav_samples.py  generate_samples_site.py  samples.css
src/: api.rs  bergamot.rs  catalog.rs  catalog_model.rs  catalog_planner.rs  catalog_tests.rs  catalog_wire.rs  font_metrics.rs  font_provider.rs  html_translate.rs  language.rs  language_detect.rs  lib.rs  mucab.rs  ocr.rs  ocr_runtime.rs  odt.rs  pdf.rs  pdf_content.rs  pdf_font_embed.rs  pdf_layout.rs  pdf_overlay.rs  pdf_resources.rs  pdf_style_probe.rs  pdf_surgery.rs  pdf_text.rs  pdf_translate.rs  pdf_write.rs  routing.rs  sentence_split.rs  session.rs  settings.rs  speech.rs  styled.rs  tarkka.rs  tesseract.rs  translate.rs  transliterate.rs  tts.rs
tests/: detect_uaf.rs  odt_smoke.rs  overpaint_visual.rs  pdf_smoke.rs  translate_smoke.rs
