[package]
name = "translator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "translator"
path = "src/lib.rs"

[features]
uniffi = ["dep:uniffi"]
dictionary = ["dep:tarkka"]
mucab = ["dep:mucab"]
tesseract = ["dep:tesseract"]
tts = ["dep:piper-rs"]
transliterate = ["dep:icu", "dep:icu_experimental"]

[dependencies]
bergamot-sys = { git = "https://github.com/DavidVentura/bergamot-sys" }
cld2 = { git = "https://github.com/DavidVentura/rust-cld2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", optional = true }
tarkka = { git = "https://github.com/DavidVentura/tarkka", optional = true }
tesseract = { git = "https://github.com/DavidVentura/tesseract-rs", optional = true }
mucab = { git = "https://github.com/DavidVentura/mucab", optional = true }
piper-rs = { git = "https://github.com/DavidVentura/piper-rs", optional = true, features = ["japanese", "fst-normalization"] }
icu_experimental = { version = "0.4", features = ["compiled_data"], optional = true }
icu = { version = "2.1", optional = true }
