[package]
name = "translator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "translator"
path = "src/lib.rs"

[[bin]]
name = "bucket_samples"
path = "src/bin/bucket_samples.rs"
required-features = ["tts"]

[features]
uniffi = ["dep:uniffi"]
dictionary = ["dep:tarkka"]
mucab = ["dep:mucab"]
tesseract = ["dep:tesseract"]
tts = ["dep:piper-rs"]
transliterate = ["dep:icu", "dep:icu_experimental"]
pdf = ["dep:mupdf", "dep:lopdf", "dep:ort", "dep:ndarray", "dep:image"]

[dependencies]
bergamot-sys = { git = "https://github.com/DavidVentura/bergamot-sys" }
cld2 = { git = "https://github.com/DavidVentura/rust-cld2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", optional = true }
tarkka = { git = "https://github.com/DavidVentura/tarkka", optional = true }
tesseract = { git = "https://github.com/DavidVentura/tesseract-rs", optional = true }
mucab = { git = "https://github.com/DavidVentura/mucab", optional = true }
piper-rs = { git = "https://github.com/DavidVentura/piper-rs", optional = true, features = ["japanese", "fst-normalization"] }
icu_experimental = { version = "0.4", features = ["compiled_data"], optional = true }
icu = { version = "2.1", optional = true }
mupdf = { version = "0.6", optional = true, default-features = false }
lopdf = { version = "0.40", optional = true, default-features = false }
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = { version = "0.16.1", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ab_glyph = "0.2"

[[test]]
name = "overpaint_visual"
path = "tests/overpaint_visual.rs"
required-features = ["tesseract"]

[[test]]
name = "pdf_smoke"
path = "tests/pdf_smoke.rs"
required-features = ["pdf"]

# [patch."https://github.com/DavidVentura/piper-rs"]
# piper-rs = { path = "../piper-rs" }
