[package]
name = "translator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "translator"
path = "src/lib.rs"

[[bin]]
name = "bucket_samples"
path = "src/bin/bucket_samples.rs"
required-features = ["tts"]

[[bin]]
name = "bloat_probe"
path = "src/bin/bloat_probe.rs"
required-features = ["odt", "tts", "dictionary", "tesseract", "transliterate", "pdf"]

[features]
default = []
uniffi = ["dep:uniffi"]
dictionary = ["dep:tarkka"]
mucab = ["dep:mucab"]
tesseract = ["dep:tesseract"]
tts = ["dep:piper-rs"]
transliterate = ["dep:icu_locale_core", "dep:icu_experimental"]
pdf = ["dep:mupdf", "dep:lopdf", "dep:ttf-parser", "dep:subsetter"]
odt = ["dep:zip"]
html = ["dep:html5ever", "dep:markup5ever_rcdom"]

[dependencies]
slimt-sys = { git = "https://github.com/DavidVentura/slimt-sys" }
cld2 = { git = "https://github.com/DavidVentura/rust-cld2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", optional = true }
tarkka = { git = "https://github.com/DavidVentura/tarkka", optional = true }
tesseract = { git = "https://github.com/DavidVentura/tesseract-rs", optional = true }
mucab = { git = "https://github.com/DavidVentura/mucab", optional = true }
piper-rs = { git = "https://github.com/DavidVentura/piper-rs", optional = true, features = ["japanese", "fst-normalization"] }
icu_experimental = { version = "0.4", features = ["compiled_data"], optional = true }
icu_locale_core = { version = "2.2", optional = true }
# mupdf = { path = "../mupdf-rs", optional = true, default-features = false }
mupdf = { git = "https://github.com/DavidVentura/mupdf-rs", optional = true, default-features = false }
lopdf = { version = "0.40", optional = true, default-features = false }
ttf-parser = { version = "0.25", optional = true, default-features = false, features = ["std", "opentype-layout"] }
subsetter = { version = "0.2", optional = true, default-features = false }

zip = { version = "2.4.2", optional = true, default-features = false, features = ["deflate"] }
html5ever = { version = "0.38", optional = true }
markup5ever_rcdom = { version = "0.38", optional = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ab_glyph = "0.2"

[[test]]
name = "overpaint_visual"
path = "tests/overpaint_visual.rs"
required-features = ["tesseract"]

[[test]]
name = "pdf_smoke"
path = "tests/pdf_smoke.rs"
required-features = ["pdf"]

[[test]]
name = "odt_smoke"
path = "tests/odt_smoke.rs"
required-features = ["odt"]

# [patch."https://github.com/DavidVentura/piper-rs"]
# piper-rs = { path = "../piper-rs" }
